--- a/pom.xml
+++ b/pom.xml
@@ -44,6 +44,11 @@
 
   <dependencyManagement>
     <dependencies>
+      <dependency>
+        <groupId>com.alibaba</groupId>
+        <artifactId>fastjson</artifactId>
+        <version>1.2.28</version>
+      </dependency>
 
     </dependencies>
   </dependencyManagement>
