--- a/pom.xml
+++ b/pom.xml
@@ -43,7 +43,6 @@
     </profile>
   </profiles>
 
-  <dependencyManagement>
     <dependencies>
       <dependency>
         <groupId>com.alibaba</groupId>
@@ -56,57 +55,64 @@
         <artifactId>commons-logging</artifactId>
         <version>${commons.logging.version}</version>
       </dependency>
-
+      <dependency>
+        <groupId>log4j</groupId>
+        <artifactId>log4j</artifactId>
+        <version>${log4j.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>4.11</version>
+      </dependency>
     </dependencies>
-  </dependencyManagement>
-
 
   <build>
     <finalName>studyEveryDay</finalName>
-    <pluginManagement>
-      <plugins>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>3.2</version>
-          <configuration>
-            <source>1.7</source>
-            <target>1.7</target>
-          </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-dependency-plugin</artifactId>
-          <version>2.9</version>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-resources-plugin</artifactId>
-          <version>2.7</version>
-          <configuration>
-            <encoding>UTF-8</encoding>
-            <nonFilteredFileExtensions>
-              <nonFilteredFileExtension>xls</nonFilteredFileExtension>
-            </nonFilteredFileExtensions>
-          </configuration>
-        </plugin>
-        <plugin>
-          <groupId>org.apache.maven.plugins</groupId>
-          <artifactId>maven-war-plugin</artifactId>
-          <version>2.5</version>
-          <configuration>
-            <outputDirectory>${project.build.directory}</outputDirectory>
-            <archive>
-              <manifest>
-                <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
-                <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
-              </manifest>
-            </archive>
-          </configuration>
+    <!--<pluginManagement>-->
+      <!--<plugins>-->
+        <!--<plugin>-->
+          <!--<groupId>org.apache.maven.plugins</groupId>-->
+          <!--<artifactId>maven-compiler-plugin</artifactId>-->
+          <!--<version>3.2</version>-->
+          <!--<configuration>-->
+            <!--<source>1.7</source>-->
+            <!--<target>1.7</target>-->
+          <!--</configuration>-->
+        <!--</plugin>-->
+        <!--<plugin>-->
+          <!--<groupId>org.apache.maven.plugins</groupId>-->
+          <!--<artifactId>maven-dependency-plugin</artifactId>-->
+          <!--<version>2.9</version>-->
+        <!--</plugin>-->
+        <!--<plugin>-->
+          <!--<groupId>org.apache.maven.plugins</groupId>-->
+          <!--<artifactId>maven-resources-plugin</artifactId>-->
+          <!--<version>2.7</version>-->
+          <!--<configuration>-->
+            <!--<encoding>UTF-8</encoding>-->
+            <!--<nonFilteredFileExtensions>-->
+              <!--<nonFilteredFileExtension>xls</nonFilteredFileExtension>-->
+            <!--</nonFilteredFileExtensions>-->
+          <!--</configuration>-->
+        <!--</plugin>-->
+        <!--<plugin>-->
+          <!--<groupId>org.apache.maven.plugins</groupId>-->
+          <!--<artifactId>maven-war-plugin</artifactId>-->
+          <!--<version>2.5</version>-->
+          <!--<configuration>-->
+            <!--<outputDirectory>${project.build.directory}</outputDirectory>-->
+            <!--<archive>-->
+              <!--<manifest>-->
+                <!--<addDefaultImplementationEntries>true</addDefaultImplementationEntries>-->
+                <!--<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>-->
+              <!--</manifest>-->
+            <!--</archive>-->
+          <!--</configuration>-->
 
-        </plugin>
-      </plugins>
-    </pluginManagement>
+        <!--</plugin>-->
+      <!--</plugins>-->
+    <!--</pluginManagement>-->
   </build>
 
   <distributionManagement>
