--- a/pom.xml
+++ b/pom.xml
@@ -11,9 +11,44 @@
   <url>http://maven.apache.org</url>
 
   <properties>
+    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    <project.build.resourceEncoding>UTF-8</project.build.resourceEncoding>
+    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+    <javac.target.version>1.7</javac.target.version>
+
+    <manyi.common.version>0.2.2-SNAPSHOT</manyi.common.version>
+    <manyi.lbdatasource.version>0.1-SNAPSHOT</manyi.lbdatasource.version>
     <commons.logging.version>1.2</commons.logging.version>
-    <slf4j.version>1.7.7</slf4j.version>
     <log4j.version>1.2.17</log4j.version>
+    <slf4j.version>1.7.7</slf4j.version>
+    <springframework.version>4.1.1.RELEASE</springframework.version>
+    <spring.context.support.version>4.0.3.RELEASE</spring.context.support.version>
+    <springframework.security.version>3.2.5.RELEASE</springframework.security.version>
+    <jackson.version>2.7.2</jackson.version>
+    <codehaus.jackson.version>1.9.13</codehaus.jackson.version>
+    <velocity.version>1.7</velocity.version>
+    <velocity.tools.version>2.0</velocity.tools.version>
+    <mybatis.version>3.2.7-PERSONAL</mybatis.version>
+    <mybatis.spring.version>1.2.2</mybatis.spring.version>
+    <mysql.version>5.1.33</mysql.version>
+    <commons.dbcp.version>1.4</commons.dbcp.version>
+    <aspectj.version>1.8.2</aspectj.version>
+    <poi.version>3.9</poi.version>
+
+    <servlet.api.version>3.1.0</servlet.api.version>
+    <jsp.api.version>2.3.1</jsp.api.version>
+    <mybatis.generator.version>1.3.2</mybatis.generator.version>
+
+    <junit.version>4.11</junit.version>
+
+    <maven.compiler.plugin.version>3.2</maven.compiler.plugin.version>
+    <maven.dependency.plugin.version>2.9</maven.dependency.plugin.version>
+    <maven.resources.plugin.version>2.7</maven.resources.plugin.version>
+    <maven.war.plugin.version>2.5</maven.war.plugin.version>
+    <jetty.maven.plugin.version>8.1.16.v20140903</jetty.maven.plugin.version>
+    <mybatis.generator.maven.plugin.version>1.3.2</mybatis.generator.maven.plugin.version>
+
+    <maven.test.skip>true</maven.test.skip>
   </properties>
 
   <profiles>
@@ -49,22 +84,127 @@
         <artifactId>fastjson</artifactId>
         <version>1.2.28</version>
       </dependency>
-      <!--logging-->
       <dependency>
-        <groupId>commons-logging</groupId>
-        <artifactId>commons-logging</artifactId>
-        <version>${commons.logging.version}</version>
-      </dependency>
-      <dependency>
-        <groupId>log4j</groupId>
-        <artifactId>log4j</artifactId>
-        <version>${log4j.version}</version>
+        <groupId>com.manyi.dcm</groupId>
+        <artifactId>lbdatasource</artifactId>
+        <version>${manyi.lbdatasource.version}</version>
       </dependency>
       <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
         <version>4.11</version>
       </dependency>
+        <!--logging-->
+        <dependency>
+          <groupId>commons-logging</groupId>
+          <artifactId>commons-logging</artifactId>
+          <version>${commons.logging.version}</version>
+        </dependency>
+        <dependency>
+          <groupId>log4j</groupId>
+          <artifactId>log4j</artifactId>
+          <version>${log4j.version}</version>
+        </dependency>
+
+    <dependency>
+        <groupId>org.slf4j</groupId>
+        <artifactId>slf4j-log4j12</artifactId>
+        <version>${slf4j.version}</version>
+      </dependency>
+      <!-- spring -->
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-context</artifactId>
+        <version>${springframework.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-context-support</artifactId>
+        <version>${spring.context.support.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-webmvc</artifactId>
+        <version>${springframework.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-orm</artifactId>
+        <version>${springframework.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-web</artifactId>
+        <version>${springframework.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-aop</artifactId>
+        <version>${springframework.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-beans</artifactId>
+        <version>${springframework.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-core</artifactId>
+        <version>${springframework.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-jdbc</artifactId>
+        <version>${springframework.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-tx</artifactId>
+        <version>${springframework.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-aspects</artifactId>
+        <version>${springframework.version}</version>
+      </dependency>
+
+      <!-- mybatis -->
+      <dependency>
+        <groupId>org.mybatis</groupId>
+        <artifactId>mybatis</artifactId>
+        <version>${mybatis.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.mybatis</groupId>
+        <artifactId>mybatis-spring</artifactId>
+        <version>${mybatis.spring.version}</version>
+      </dependency>
+      <dependency>
+        <groupId>org.mybatis.scripting</groupId>
+        <artifactId>mybatis-velocity</artifactId>
+        <version>1.2-SNAPSHOT</version>
+      </dependency>
+      <!-- commons-dbcp -->
+      <dependency>
+        <groupId>commons-dbcp</groupId>
+        <artifactId>commons-dbcp</artifactId>
+        <version>${commons.dbcp.version}</version>
+      </dependency>
+
+      <!-- test -->
+      <dependency>
+        <groupId>junit</groupId>
+        <artifactId>junit</artifactId>
+        <version>${junit.version}</version>
+        <scope>test</scope>
+      </dependency>
+      <dependency>
+        <groupId>org.springframework</groupId>
+        <artifactId>spring-test</artifactId>
+        <version>${springframework.version}</version>
+        <scope>test</scope>
+      </dependency>
+
     </dependencies>
 
   <build>
