--- a/pom.xml
+++ b/pom.xml
@@ -209,50 +209,84 @@
 
   <build>
     <finalName>studyEveryDay</finalName>
-    <!--<pluginManagement>-->
-      <!--<plugins>-->
-        <!--<plugin>-->
-          <!--<groupId>org.apache.maven.plugins</groupId>-->
-          <!--<artifactId>maven-compiler-plugin</artifactId>-->
-          <!--<version>3.2</version>-->
-          <!--<configuration>-->
-            <!--<source>1.7</source>-->
-            <!--<target>1.7</target>-->
-          <!--</configuration>-->
-        <!--</plugin>-->
-        <!--<plugin>-->
-          <!--<groupId>org.apache.maven.plugins</groupId>-->
-          <!--<artifactId>maven-dependency-plugin</artifactId>-->
-          <!--<version>2.9</version>-->
-        <!--</plugin>-->
-        <!--<plugin>-->
-          <!--<groupId>org.apache.maven.plugins</groupId>-->
-          <!--<artifactId>maven-resources-plugin</artifactId>-->
-          <!--<version>2.7</version>-->
-          <!--<configuration>-->
-            <!--<encoding>UTF-8</encoding>-->
-            <!--<nonFilteredFileExtensions>-->
-              <!--<nonFilteredFileExtension>xls</nonFilteredFileExtension>-->
-            <!--</nonFilteredFileExtensions>-->
-          <!--</configuration>-->
-        <!--</plugin>-->
-        <!--<plugin>-->
-          <!--<groupId>org.apache.maven.plugins</groupId>-->
-          <!--<artifactId>maven-war-plugin</artifactId>-->
-          <!--<version>2.5</version>-->
-          <!--<configuration>-->
-            <!--<outputDirectory>${project.build.directory}</outputDirectory>-->
-            <!--<archive>-->
-              <!--<manifest>-->
-                <!--<addDefaultImplementationEntries>true</addDefaultImplementationEntries>-->
-                <!--<addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>-->
-              <!--</manifest>-->
-            <!--</archive>-->
-          <!--</configuration>-->
+    <sourceDirectory>${basedir}/src/main/java</sourceDirectory>
+    <resources>
+      <resource>
+        <directory>${basedir}/src/main/resources</directory>
+        <filtering>true</filtering>
+        <includes>
+          <include>*.xml</include>
+          <include>spring/*</include>
+          <include>excel-template/*</include>
+          <include>mybatis/**/*</include>
+          <include>velocity.properties</include>
+          <include>exception-msg.properties</include>
+        </includes>
 
-        <!--</plugin>-->
-      <!--</plugins>-->
-    <!--</pluginManagement>-->
+        <excludes>
+          <exclude>authConfig.properties</exclude>
+          <exclude>config.properties</exclude>
+          <exclude>jdbc.properties</exclude>
+          <exclude>log4j.properties</exclude>
+          <exclude>jetty-context.xml</exclude>
+        </excludes>
+      </resource>
+      <resource>
+        <directory>${basedir}/src/main/resources/config/${env}</directory>
+        <includes>
+          <include>authConfig.properties</include>
+          <include>config.properties</include>
+          <include>jdbc.properties</include>
+          <include>log4j.properties</include>
+          <include>staticConfig.properties</include>
+        </includes>
+      </resource>
+    </resources>
+
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-compiler-plugin</artifactId>
+          <version>3.2</version>
+          <configuration>
+            <source>1.7</source>
+            <target>1.7</target>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-dependency-plugin</artifactId>
+          <version>2.9</version>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-resources-plugin</artifactId>
+          <version>2.7</version>
+          <configuration>
+            <encoding>UTF-8</encoding>
+            <nonFilteredFileExtensions>
+              <nonFilteredFileExtension>xls</nonFilteredFileExtension>
+            </nonFilteredFileExtensions>
+          </configuration>
+        </plugin>
+        <plugin>
+          <groupId>org.apache.maven.plugins</groupId>
+          <artifactId>maven-war-plugin</artifactId>
+          <version>2.5</version>
+          <configuration>
+            <outputDirectory>${project.build.directory}</outputDirectory>
+            <archive>
+              <manifest>
+                <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
+                <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
+              </manifest>
+            </archive>
+          </configuration>
+
+        </plugin>
+      </plugins>
+    </pluginManagement>
   </build>
 
   <distributionManagement>
