--- a/src/main/resources/config/local/config.properties
+++ b/src/main/resources/config/local/config.properties
@@ -7,6 +7,8 @@ search.soa=http://192.168.1.5:8081/IWSearchSOA/
 house.soa=http://20.0.0.7:8104/
 user.soa=http://192.168.1.16:8109/IWUserSOA/
 
+study.soa=http://localhost:8098
+
 connectTimeout=3000
 readTimeout=3000
 
