--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,7 +5,6 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns/javaee/web-app_3_0.xsd">
   <display-name>Agent Report</display-name>
-
   <context-param>
     <param-name>webAppRootKey</param-name>
     <param-value>webapp.agentreport</param-value>
@@ -46,6 +45,20 @@
     <dispatcher>REQUEST</dispatcher>
     <dispatcher>FORWARD</dispatcher>
   </filter-mapping>
+
+  <!--<filter>-->
+    <!--<filter-name>BladeFilter</filter-name>-->
+    <!--<filter-class>com.blade.BladeFilter</filter-class>-->
+    <!--<init-param>-->
+      <!--<param-name>applicationClass</param-name>-->
+      <!--<param-value>blade.sample.App</param-value>-->
+    <!--</init-param>-->
+  <!--</filter>-->
+
+  <!--<filter-mapping>-->
+    <!--<filter-name>BladeFilter</filter-name>-->
+    <!--<url-pattern>/*</url-pattern>-->
+  <!--</filter-mapping>-->
 
   <servlet>
     <servlet-name>agentReportServlet</servlet-name>
@@ -132,7 +145,7 @@
     <!--<url-pattern>*.do</url-pattern>-->
   <!--</filter-mapping>-->
 
-  <welcome-file-list>
-    <welcome-file>admin/index</welcome-file>
-  </welcome-file-list>
+  <!--<welcome-file-list>-->
+    <!--<welcome-file>admin/index</welcome-file>-->
+  <!--</welcome-file-list>-->
 </web-app>
