--- a/pom.xml
+++ b/pom.xml
@@ -441,6 +441,26 @@
     </pluginManagement>
   </build>
 
+  <!-- 设定主仓库，按设定顺序进行查找。 -->
+  <repositories>
+    <repository>
+      <id>aliyun-repos</id>
+      <name>aliyun Repository</name>
+      <url>http://maven.aliyun.com/nexus/content/groups/public</url>
+    </repository>
+    <repository>
+      <id>wuge</id>
+      <name>wuge Repositories</name>
+      <url>http://60.205.229.100:8081/nexus/content</url>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+    </repository>
+  </repositories>
+
   <distributionManagement>
     <repository>
       <id>releases</id>
