--- a/src/main/resources/velocity.properties
+++ b/src/main/resources/velocity.properties
@@ -1,7 +1,7 @@
 input.encoding=UTF8
 output.encoding=UTF8
 resource.loader=file
-file.resource.loader.path=/WEB-INF/tpl/
+file.resource.loader.path=/WEB-INF/
 file.resource.loader.class=org.apache.velocity.tools.view.servlet.WebappLoader
 #\u5f00\u542f\u5168\u5c40\u7f13\u5b58
 file.resource.loader.cache=true
