--- a/pom.xml
+++ b/pom.xml
@@ -396,6 +396,13 @@
         <version>${tomcat.version}</version>
       </dependency>
 
+      <!-- https://mvnrepository.com/artifact/com.squareup/javapoet -->
+      <dependency>
+        <groupId>com.squareup</groupId>
+        <artifactId>javapoet</artifactId>
+        <version>1.0.0</version>
+      </dependency>
+
     </dependencies>
 
   <build>
